// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders with button style 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "arial",
        },
        null,
        Object {},
      ]
    }
  >
    Press Me
  </Text>
</View>
`;

exports[`Button renders with link style 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "arial",
        },
        null,
        Object {},
      ]
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`Button renders with no style 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {},
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": undefined,
          "fontFamily": "arial",
        },
        null,
        Object {},
      ]
    }
  >
    Press Me
  </Text>
</View>
`;
